--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_splash"
@@ -12,17 +11,39 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.2"
+        android:alpha="0.3"
         android:scaleType="centerCrop"
         android:src="@mipmap/background" />
 
-    <ImageView
+     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="@dimen/_45sdp"
-        android:visibility="invisible"
-        app:srcCompat="@mipmap/launcher" />
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@mipmap/ic_launcher_foreground"
+        android:layout_centerInParent="true"
+        android:scaleY="2"
+        android:scaleX="2"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/appNameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="MiniAKD"
+        android:textAlignment="center"
+        android:textColor="@color/md_text_white"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:layout_below="@id/logoImageView"/>
+
+    <TextView
+        android:id="@+id/versionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Version: "
+        android:textAlignment="center"
+        android:textColor="@color/md_text_white"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
