--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,24 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="BottomSheetDialogTitle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/md_text_white</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+    <style name="BottomSheetDialogNegativeActionButton" >
+        <item name="android:background">@color/colorAccent</item>
+    </style>
+
+    <style name="BottomSheetDialogPositiveActionButton">
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <style name="InputField">
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
 </resources>
