- Adding database support - StudentByBrigade implemented - StudentBottomSheetDialog implemented

--- a/app/src/main/res/layout/fragment_students.xml
+++ b/app/src/main/res/layout/fragment_students.xml
@@ -14,12 +14,13 @@
         app:tabIndicatorColor="@color/colorPrimaryDark"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/md_text_white"
-        app:tabTextColor="@color/md_text_white" />
+        app:tabTextColor="@color/md_text_white"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/brigadesTabLayout"/>
 
 
     <com.leinardi.android.speeddial.SpeedDialOverlayLayout
