- Brigades fragment implemented

--- a/app/src/main/res/layout/recyclerviewitem_brigade.xml
+++ b/app/src/main/res/layout/recyclerviewitem_brigade.xml
@@ -16,19 +16,28 @@
             android:id="@+id/personImageView"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/ic_person"
+            android:src="@drawable/ic_people"
             android:tint="?android:attr/colorPrimary"/>
 
-        <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold"
             android:layout_toEndOf="@id/personImageView"
             android:layout_centerVertical="true"
-            android:text="ashdakjshkjahsk"/>
+            android:orientation="vertical"
+            android:layout_marginStart="@dimen/dimen_4dp">
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
+            <TextView
+                android:id="@+id/countTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
+        </LinearLayout>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
