- Brigades fragment adapter modification changes implemented

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,10 @@
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_today"
             android:title="Cortes evalutivos" />
+        <item
+            android:id="@+id/nav_turns"
+            android:icon="@drawable/ic_time"
+            android:title="Turnos" />
     </group>
 
     <group
