--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,11 +29,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="BottomSheetDialogTitle" parent="Widget.AppCompat.TextView">
+    <style name="BigText" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">25sp</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/md_text_white</item>
+    </style>
+
+    <style name="BottomSheetDialogTitle" parent="BigText">
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">10dp</item>
     </style>
 
@@ -47,6 +49,11 @@
 
     <style name="InputField">
         <item name="android:layout_margin">5dp</item>
+    </style>
+
+    <style name="AppNameTextView" parent="BigText">
+        <item name="android:textColor">@android:color/white</item>
+
     </style>
 
 </resources>
