--- a/app/src/main/res/layout/turns_fragment.xml
+++ b/app/src/main/res/layout/turns_fragment.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragments.turns.TurnsFragment">
 
     <com.github.badoualy.datepicker.DatePickerTimeline
+        android:id="@+id/turnsDatePickerTimeline"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" />
+
+
+    <TextView
+        android:id="@+id/emptyTurnsTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
 
 
 
-
-</FrameLayout>
+</RelativeLayout>
