--- a/app/src/main/res/layout/recyclerviewitem_subject.xml
+++ b/app/src/main/res/layout/recyclerviewitem_subject.xml
@@ -7,24 +7,26 @@
     android:layout_margin="@dimen/dimen_4dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10dp">
+        android:elevation="@dimen/dimen_4dp"
+        android:layout_margin="@dimen/dimen_4dp">
 
         <ImageView
-            android:id="@+id/personImageView"
+            android:id="@+id/imageView"
             android:layout_width="@dimen/iconImageViewDimention"
             android:layout_height="@dimen/iconImageViewDimention"
-            android:src="@drawable/ic_people"
+            android:src="@drawable/ic_book"
             android:tint="?android:attr/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/personImageView"
+            android:layout_toEndOf="@id/imageView"
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:layout_marginStart="@dimen/dimen_4dp">
+
             <TextView
                 android:id="@+id/nameTextView"
                 android:layout_width="wrap_content"
@@ -32,11 +34,14 @@
                 android:textSize="16sp"
                 android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/countTextView"
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
+
     </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
