- Subjects edition implemented

--- a/app/src/main/res/layout/fragment_studentsbybrigade.xml
+++ b/app/src/main/res/layout/fragment_studentsbybrigade.xml
@@ -11,7 +11,7 @@
         android:id="@+id/recyclerView"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-    <include layout="@layout/fragment_empty"
+    <include layout="@layout/layout_empty"
         android:id="@+id/emptyLayoutInclude"
         android:visibility="gone"/>
 
