--- a/app/src/main/res/layout/fragments_brigades.xml
+++ b/app/src/main/res/layout/fragments_brigades.xml
@@ -10,4 +10,26 @@
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
+    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
+        android:id="@+id/speedDialOverlayLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black_overlay"/>
+
+    <com.leinardi.android.speeddial.SpeedDialView
+        android:id="@+id/speedDial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:sdMainFabClosedSrc="@drawable/ic_add"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"
+        app:sdOverlayLayout="@id/speedDialOverlayLayout"/>
+
+    <include layout="@layout/layout_empty"
+        android:id="@+id/emptyLayoutInclude"
+        android:visibility="gone"/>
+
 </RelativeLayout>
