--- a/app/src/main/res/layout/bottomsheetdialog_addsubject.xml
+++ b/app/src/main/res/layout/bottomsheetdialog_addsubject.xml
@@ -36,6 +36,7 @@
         android:hint="Total de Horas/Clase"
         android:inputType="number|numberSigned"
         android:ems="10"
+        android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameEditText"
