--- a/app/src/main/res/layout/fragment_turns.xml
+++ b/app/src/main/res/layout/fragment_turns.xml
@@ -1,49 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.turns.TurnsFragment">
+    tools:context=".fragments.turns.TurnsFragment"
+    android:layout_centerVertical="false">
 
     <com.github.badoualy.datepicker.DatePickerTimeline
         android:id="@+id/turnsDatePickerTimeline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:mti_bgLblDateSelectedColor="?android:attr/colorPrimary"
         app:mti_bgLblTodayColor="?android:attr/colorAccent"
-        app:mti_ringLblDateSelectedColor="?android:attr/colorPrimary"
-        app:mti_followScroll="false"/>
+        app:mti_followScroll="false"
+        app:mti_ringLblDateSelectedColor="?android:attr/colorPrimary"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/turnsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/turnsDatePickerTimeline" />
 
     <TextView
         android:id="@+id/emptyTurnsTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.leinardi.android.speeddial.SpeedDialOverlayLayout
         android:id="@+id/speedDialOverlayLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_overlay"/>
+        android:background="@color/black_overlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.leinardi.android.speeddial.SpeedDialView
         android:id="@+id/speedDial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:sdMainFabClosedSrc="@drawable/ic_add"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
         app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"
-        app:sdOverlayLayout="@id/speedDialOverlayLayout"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:sdMainFabClosedSrc="@drawable/ic_add"
+        app:sdOverlayLayout="@id/speedDialOverlayLayout" />
 
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
