--- a/app/src/main/res/layout/recyclerviewitem_turn.xml
+++ b/app/src/main/res/layout/recyclerviewitem_turn.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/turnItemLayout"
     android:elevation="@dimen/dimen_4dp"
     android:layout_margin="@dimen/dimen_4dp">
 
