--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_turns">
+    app:startDestination="@+id/nav_turns_details">
 
     <fragment
         android:id="@+id/nav_students"
@@ -15,7 +15,11 @@
         android:id="@+id/nav_brigades"
         android:name="uci.fiai.miniakd.fragments.brigades.BrigadesFragment"
         android:label="@string/brigades_header"
-        tools:layout="@layout/fragments_brigades" />
+        tools:layout="@layout/fragments_brigades" >
+        <action
+            android:id="@+id/action_nav_brigades_to_nav_studentsbybrigade"
+            app:destination="@id/nav_studentsbybrigade" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_studentsbybrigade"
@@ -30,31 +34,37 @@
         tools:layout="@layout/fragment_subjects" />
 
     <fragment
-        android:id="@+id/nav_evaluations"
-        android:name="uci.fiai.miniakd.fragments.settings.SettingsFragment"
-        android:label="Evaluaciones"
-        tools:layout="@layout/fragment_evaluations" />
+        android:id="@+id/nav_turns"
+        android:name="uci.fiai.miniakd.fragments.turns.TurnsFragment"
+        android:label="Turnos"
+        tools:layout="@layout/fragment_turns" >
+        <action
+            android:id="@+id/action_nav_turns_to_nav_turns_details"
+            app:destination="@id/nav_turns_details"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_tools"
+        android:id="@+id/nav_turns_details"
+        android:name="uci.fiai.miniakd.fragments.turns.details.TurnDetailsFragment"
+        android:label="Turnos"
+        tools:layout="@layout/fragment_turn_details" />
+
+    <fragment
+        android:id="@+id/nav_about"
         android:name="uci.fiai.miniakd.fragments.about.AboutFragment"
         android:label="Cortes evaluativos"
         tools:layout="@layout/fragment_cuts" />
 
     <fragment
-        android:id="@+id/nav_turns"
-        android:name="uci.fiai.miniakd.fragments.turns.TurnsFragment"
-        android:label="Turnos"
-        tools:layout="@layout/fragment_turns" />
-
-    <fragment
-        android:id="@+id/nav_share"
+        android:id="@+id/nav_cuts"
         android:name="uci.fiai.miniakd.fragments.cuts.CutsFragment"
         android:label="Configuración"
         tools:layout="@layout/fragment_settings" />
 
     <fragment
-        android:id="@+id/nav_send"
+        android:id="@+id/nav_evaluations"
         android:name="uci.fiai.miniakd.fragments.evaluations.EvaluationsFragment"
         android:label="Acerca de"
         tools:layout="@layout/fragment_about" />
